--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "firebase": "^4.2.0",
     "node-sass": "^4.5.3",
     "pug": "^2.0.0-rc.2",
     "pug-loader": "^2.3.0",
@@ -61,6 +62,7 @@
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
+    "vuefire": "^1.4.3",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
